<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:id="@+id/memoDetailView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/memo_writing"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/memoDetailDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/date_text"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/memoDateTo"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@id/memoDetailView"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@id/memoDetailView"
        app:layout_constraintTop_toTopOf="@id/memoDetailView" />

    <ImageView
        android:id="@+id/memoDetailImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:contentDescription="@string/picture"
        android:scaleType="centerInside"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/memoDetailContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/memoDetailDate"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/memoDetailContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:gravity="center"
        android:background="@color/white"
        android:text="@string/content"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:maxLength="250"
        app:layout_constraintTop_toBottomOf="@id/memoDetailImg"
        app:layout_constraintBottom_toBottomOf="@id/memoDetailView"
        app:layout_constraintStart_toStartOf="@id/memoDetailView"
        app:layout_constraintEnd_toEndOf="@id/memoDetailView"
        />

    <ImageView
        android:id="@+id/memoDetailPriceImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:src="@drawable/clover_30"
        android:contentDescription="@string/cloverIcon"
        app:layout_constraintTop_toBottomOf="@id/memoDetailView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/memoDetailPriceTxt"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <TextView
        android:id="@+id/memoDetailPriceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memoDateFrom"
        style="@style/defaultFont"
        app:layout_constraintTop_toBottomOf="@id/memoDetailView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/memoDetailPriceImg"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>