<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.MemoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        android:background="@color/cream">

        <TextView
            android:id="@+id/addPicture"
            android:text="@string/picture"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="7dp"
            android:layout_marginStart="20dp"
            style="@style/defaultFont.click"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/memoView"
            app:layout_constraintStart_toStartOf="parent"
           />

        <TextView
            android:id="@+id/save"
            android:layout_height="48dp"
            android:text="@string/save"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="20dp"
            style="@style/defaultFont.click"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/memoView"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/memoView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/memo_writing"
            app:layout_constraintTop_toBottomOf="@id/addPicture"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/txtMemoDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/date_text"
            android:clickable="true"
            android:minHeight="48dp"
            android:text="@string/memoDateTo"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="@id/memoView"
            app:layout_constraintStart_toStartOf="@id/memoView"
            app:layout_constraintTop_toTopOf="@id/memoView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:contentDescription="@string/picture"
            android:scaleType="centerInside"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/editMemo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtMemoDate"
            tools:src="@tools:sample/avatars" />

        <EditText
            android:id="@+id/editMemo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:gravity="center"
            android:background="@color/white"
            android:inputType="textMultiLine"
            android:hint="@string/memo"
            android:textColorHint="@color/darkerGray"
            android:textSize="12sp"
            android:maxLength="250"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:layout_constraintBottom_toBottomOf="@id/memoView"
            app:layout_constraintStart_toStartOf="@id/memoView"
            app:layout_constraintEnd_toEndOf="@id/memoView"
           />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>